class ExploitEngine:
    """
    This class is responsible for exploiting identified vulnerabilities.
    It interacts with the vulnerability scanner to receive vulnerabilities and attempts to exploit them.
    """

    def exploit_vulnerability(self, vulnerability: dict) -> dict:
        """
        Exploits a given vulnerability.

        Args:
            vulnerability (dict): A dictionary containing details about the vulnerability to be exploited.

        Returns:
            dict: A dictionary representing the results of the exploitation attempt.
        """
        exploit_result = {
            'vulnerability_type': vulnerability['type'],
            'exploited': False,
            'details': None
        }

        # Exploit logic based on the type of vulnerability
        if vulnerability['type'] == 'SQL Injection':
            exploit_result['exploited'] = True
            exploit_result['details'] = 'Simulated SQL command to retrieve sensitive data.'
        elif vulnerability['type'] == 'XSS':
            exploit_result['exploited'] = True
            exploit_result['details'] = 'Simulated script execution on victim\'s browser.'
        elif vulnerability['type'] == 'CSRF':
            exploit_result['exploited'] = True
            exploit_result['details'] = 'Simulated forged request to perform actions on behalf of the user.'

        return exploit_result
