import http.client
from urllib.parse import urlparse, urlencode

class HttpRequests:
    """
    This class handles HTTP interactions by sending requests to specified URLs.
    It supports various HTTP methods like GET, POST, PUT, DELETE, and HEAD.
    """
    
    def send_request(self, url: str, method: str = 'GET', data: dict = None) -> dict:
        """
        Send an HTTP request to the specified URL with the given method and data.

        Args:
            url (str): The URL to which the request is sent.
            method (str): The HTTP method to use ('GET', 'POST', 'PUT', etc.). Default is 'GET'.
            data (dict): The data to be sent in the request for methods like POST and PUT. Default is None.

        Returns:
            dict: A dictionary representing the response received from the server.
        """
        try:
            # Parse the URL to extract components
            parsed_url = urlparse(url)
            host = parsed_url.netloc
            path = parsed_url.path
            if parsed_url.query:
                path += '?' + parsed_url.query

            # Create a connection based on the scheme
            if parsed_url.scheme == "https":
                conn = http.client.HTTPSConnection(host)
            else:
                conn = http.client.HTTPConnection(host)

            # Prepare headers and body
            headers = {
                'Content-type': 'application/x-www-form-urlencoded',
                'Accept': 'text/plain'
            }
            body = None
            if data and method in ['POST', 'PUT', 'DELETE']:
                body = urlencode(data)
                headers['Content-Length'] = str(len(body))

            # Send the request
            conn.request(method, path, body, headers)
            response = conn.getresponse()

            # Read and return the response
            response_data = response.read()
            conn.close()

            return {
                'status': response.status,
                'reason': response.reason,
                'headers': response.getheaders(),
                'body': response_data.decode()
            }
        except Exception as e:
            return {'status': 'error', 'reason': str(e)}
