## main.py

from http_requests import HttpRequests
from vulnerability_scanner import VulnerabilityScanner
from exploit_engine import ExploitEngine
from report_generator import ReportGenerator

class Main:
    """
    The Main class coordinates the flow between all modules, ensuring proper sequence of operations.
    It integrates HttpRequests, VulnerabilityScanner, ExploitEngine, and ReportGenerator to perform
    vulnerability scanning and exploitation.
    """
    def __init__(self):
        """
        Initializes the Main class with instances of all the necessary components.
        """
        self.http_requests = HttpRequests()
        self.scanner = VulnerabilityScanner()
        self.exploit_engine = ExploitEngine()
        self.report_generator = ReportGenerator()

    def run(self, url: str, method: str = 'GET', data: dict = None):
        """
        The main entry point for running the vulnerability scanning and exploitation tool.

        Args:
            url (str): The URL to scan for vulnerabilities.
            method (str): The HTTP method to use for the request. Defaults to 'GET'.
            data (dict): The data to send with the request if method is POST or PUT. Defaults to None.
        """
        # Send HTTP request
        response = self.http_requests.send_request(url, method, data)

        # Scan for vulnerabilities
        vulnerabilities = self.scanner.scan_for_vulnerabilities(response)

        # Exploit found vulnerabilities
        exploit_results = [self.exploit_engine.exploit_vulnerability(vuln) for vuln in vulnerabilities]

        # Generate report
        report = self.report_generator.generate_report(exploit_results)

        # Output the report
        print(report)

# Example usage:
if __name__ == "__main__":
    main = Main()
    main.run("http://localhost:9090", "GET")
