import re

class VulnerabilityScanner:
    """
    This class scans HTTP responses for potential vulnerabilities.
    It is designed to identify common security issues such as SQL injection, XSS, and CSRF.
    """

    def scan_for_vulnerabilities(self, response: dict) -> list:
        """
        Scans the given HTTP response for vulnerabilities.

        Args:
            response (dict): The HTTP response dictionary containing status, headers, and body.

        Returns:
            list: A list of dictionaries, each representing a found vulnerability.
        """
        vulnerabilities = []
        # Check for SQL Injection vulnerabilities
        if self.detect_sql_injection(response['body']):
            vulnerabilities.append({
                'type': 'SQL Injection',
                'description': 'SQL injection vulnerability detected.',
                'payload': response['body']
            })

        # Check for XSS vulnerabilities
        if self.detect_xss(response['body']):
            vulnerabilities.append({
                'type': 'XSS',
                'description': 'Cross-site scripting vulnerability detected.',
                'payload': response['body']
            })

        # Check for CSRF vulnerabilities
        if self.detect_csrf(response['headers']):
            vulnerabilities.append({
                'type': 'CSRF',
                'description': 'Cross-site request forgery vulnerability detected.',
                'payload': response['headers']
            })

        return vulnerabilities

    def detect_sql_injection(self, content: str) -> bool:
        """
        Detects potential SQL injection vectors in a given content string.

        Args:
            content (str): The content to scan for SQL injection patterns.

        Returns:
            bool: True if potential SQL injection patterns are found, False otherwise.
        """
        sql_injection_patterns = [r"\' OR \d+=\d+", r"admin\'--", r"DROP TABLE"]
        return any(re.search(pattern, content) for pattern in sql_injection_patterns)

    def detect_xss(self, content: str) -> bool:
        """
        Detects potential XSS (Cross-site Scripting) vectors in a given content string.

        Args:
            content (str): The content to scan for XSS patterns.

        Returns:
            bool: True if potential XSS patterns are found, False otherwise.
        """
        xss_patterns = [r"<script.*?>.*?</script>", r"javascript:", r"<iframe.*?>", r"onerror="]
        return any(re.search(pattern, content, re.IGNORECASE) for pattern in xss_patterns)

    def detect_csrf(self, headers: dict) -> bool:
        """
        Detects potential CSRF (Cross-site Request Forgery) vulnerabilities based on headers.

        Args:
            headers (dict): The HTTP headers to check for CSRF vulnerabilities.

        Returns:
            bool: True if headers lack CSRF protections, False otherwise.
        """
        # Check for common CSRF tokens in headers
        csrf_tokens = ['X-CSRF-Token', 'CSRF-Token', 'XSRF-TOKEN', 'SameSite']
        return not any(token in headers for token in csrf_tokens)
