
classDiagram
    class Main {
        -HttpRequests http_requests
        -VulnerabilityScanner scanner
        -ExploitEngine exploit_engine
        -ReportGenerator report_generator
        +run() void
    }
    class HttpRequests {
        +send_request(url: str, method: str, data: dict) dict
    }
    class VulnerabilityScanner {
        +scan_for_vulnerabilities(response: dict) list
    }
    class ExploitEngine {
        +exploit_vulnerability(vulnerability: dict) dict
    }
    class ReportGenerator {
        +generate_report(vulnerabilities: list) str
    }
    Main --> HttpRequests
    Main --> VulnerabilityScanner
    Main --> ExploitEngine
    Main --> ReportGenerator
